 * Mac OS X: enhanced AppleScript support
 * The rc and telnet lua interfaces were merged into a new "cli" interface
 * dbus: Rewrite of the main loop to use a more efficient poll-based model
 * dbus: Upgrade to an mpris2 compliant interface, see http://www.mpris.org
 * webUI/http: Rewrite of the web interface, using jQuery
 * webUI/http: some requests are now supported in JSON in addition to XML

Video Output:
 * New video output based on Direct2D for Windows 7 and Vista (with Platform Update)
 * New video output for iOS platform
 * Experimental work in progress on a video output using EGL
 * Adaptation of the OpenGL layer for OpenGL ES 1.1
 * Various vmem improvements
 * OpenGL video output now accepts YUV as input and uses fragment programs for
   chroma conversion
 * New video output for Android platform, based on Surface
 * Support for 9/10bits output in the OpenGL output
 * Updated OpenGL video output for Mac, which now requires a
   Quartz Extreme capable machine

Audio Output:
 * New audio output based on AudioQueue API for iOS
 * New audio output in memory (amem)
 * Important simplification and improvements in the core audio output
 * New audio output based on OpenSL ES API for Android
 * New audio resampler using the Secret Rabbit Code (a.k.a. libsamplerate)

Video Filter:
 * New gradfun filter for debanding videos using dithering
 * Rewrite of the grain filter, faster and with better quality
 * New posterize filter for lowering the number of colors
 * Atmo ambilight: improve Fnordlicht up to 254 channels
 * New sepia filter for creating sepia effect in videos
 * New deinterlacer mode Phosphor, a framerate doubling CRT TV simulator
 * New deinterlacer mode IVTC, to do live inverse telecine for NTSC films
 * New subsdelay filter to change subtitles delay
 * New anti-flickering filter
 * New OpenMAX DL IPCS filter for color space conversion and resizing
 * Major improvements in the freetype text-rendering module, notably supporting